--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,78 @@
+appnope==0.1.4
 astropy==7.0.1
-numpy==2.2.3
-scikit_learn==1.6.1
+astropy-iers-data==0.2025.2.10.0.33.26
+asttokens==3.0.0
+attrs==25.1.0
+backcall==0.2.0
+beautifulsoup4==4.13.3
+bleach==6.2.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+comm==0.2.2
+debugpy==1.8.12
+decorator==5.1.1
+defusedxml==0.7.1
+docopt==0.6.2
+executing==2.2.0
+fastjsonschema==2.21.1
+filelock==3.17.0
+fsspec==2025.2.0
+idna==3.10
+ipykernel==6.29.5
+ipython==8.12.3
+jedi==0.19.2
+Jinja2==3.1.5
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyterlab_pygments==0.3.0
+MarkupSafe==3.0.2
+matplotlib-inline==0.1.7
+mistune==3.1.2
+mpmath==1.3.0
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.4.2
+numpy==1.26.4
+packaging==24.2
+pandas==2.2.3
+pandocfilters==1.5.1
+parso==0.8.4
+pexpect==4.9.0
+pickleshare==0.7.5
+pipreqs==0.5.0
+platformdirs==4.3.6
+prompt_toolkit==3.0.50
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyerfa==2.0.1.5
+Pygments==2.19.1
+python-dateutil==2.9.0.post0
+pytz==2025.1
+PyYAML==6.0.2
+pyzmq==26.2.1
+referencing==0.36.2
+requests==2.32.3
+rpds-py==0.22.3
+scikit-learn==1.6.1
+scipy==1.15.2
+six==1.17.0
+soupsieve==2.6
+stack-data==0.6.3
+sympy==1.13.3
+threadpoolctl==3.5.0
+tinycss2==1.4.0
 torch==2.2.2
+tornado==6.4.2
+traitlets==5.14.3
+typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==2.3.0
+wcwidth==0.2.13
+webencodings==0.5.1
+yarg==0.1.9
